# adventOfCode22

./: .gitignore  1.py  2.py  3.py  4.py  funcional.py  pyproject.toml  readme.md
day1/: 1.py
day10/: 10.py
day11/: 11.py  112.py
day12/: 12.py  122.py  123.py  1234.py  12input.txt  new.py  new2.py
day13/: 123.py  1234.py  13.py  132.py  a.py  b.py
day14/: 14.py  ejemploCorto.py
day15/: 15.py  152.py  153.py  154.py  155.py  graphicExample.py
day16/: 16.py  161.py  162.py  163.py  164.py
day17/: 17.py  172.py  173.py  174.py  175.py
day2/: 2.py
day3/: 3.py
day4/: 4.py
day5/: 5.py
day6/: 6.py
day7/: 7.py
day8/: 8.py
day9/: 9.py  9t.py  day9.py  test.py
