[tool.poetry]
name = "adventOfCode22"
version = "0.1.0"
description = "\"This project contains code to solve each day of the advent of code 2022 challenges\""
authors = ["Oriana Pettinelli"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
